--- a/src/App.css
+++ b/src/App.css
@@ -14,18 +14,21 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-image: url("cloud.jpg");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #100101;
+  font-size: 20px;
+  font-family: "Comic Sans MS";
 }
 
 .App-link {
-  color: #61dafb;
+  color: #083542;
+  font-size: 30px;
 }
 
 @keyframes App-logo-spin {
